--- a/source_code/Mydemo/Uncertainty.ipynb
+++ b/source_code/Mydemo/Uncertainty.ipynb
@@ -10,6 +10,8 @@
     "import numpy as np\n",
     "from ultralytics import YOLO\n",
     "from PIL import Image\n",
+    "import os\n",
+    "\n",
     "def cal_entropy(prob):\n",
     "    \"\"\"\n",
     "    calculate entropy of each defect\n",
@@ -64,7 +66,7 @@
    ],
    "source": [
     "\n",
-    "img_path = img_path = '/Data4/student_zhihan_data/data/GC10-DET_brightness_10/test/images/img_08_425391700_00198_jpg.rf.79baed4ea8e426615cf676e94acf6292.jpg'\n",
+    "img_path = '/Data4/student_zhihan_data/data/GC10-DET_brightness_10/test/images/img_08_425391700_00198_jpg.rf.79baed4ea8e426615cf676e94acf6292.jpg'\n",
     "results = model([img_path for i in range(400)])\n",
     "\n",
     "# cal_entropy_one_image(img_path, model, 20)\n",
@@ -170,7 +172,7 @@
     }
    ],
    "source": [
-    "objectness_uncertainty = np.var(conf[conf > 0.])\n",
+    "objectness_uncertainty = np.var(conf[conf > 0.5])\n",
     "objectness_uncertainty"
    ]
   },
@@ -271,6 +273,59 @@
     "\n",
     "for i in range(cluster_num):\n",
     "    visualize_cluster_results(results, select_boxes, labels, i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def uncertainty(times, model):\n",
+    "    dir = ['GC10-DET_brightness_'+str(i) for i in [-100, -50, -30, 30, 50, 90]]\n",
+    "    dir.append['GC10-DET']\n",
+    "    \n",
+    "    dir = [os.path.join('/Data4/student_zhihan_data/data',i) for i in dir]\n",
+    "    for i in len(os.listdir(os.path.join(dir, 'test', 'images'))):\n",
+    "    \n",
+    "        img = os.listdir(os.path.join(dir, \"test\", \"images\"))[i]\n",
+    "        label = os.listdir(os.path.join(dir, \"test\", \"labels\"))[i]\n",
+    "        \n",
+    "\n",
+    "        img_path = os.path.join(dir, \"test\", \"images\", img)\n",
+    "        label_path = os.path.join(dir, \"test\", \"labels\", label)\n",
+    "    \n",
+    "        results = model([img_path for i in range(times)])\n",
+    "        \n",
+    "        boundingboxes = []\n",
+    "        boxes = []\n",
+    "        conf = []\n",
+    "        cls_conf = []\n",
+    "        for re in results:\n",
+    "            conf.extend(re.boxes.conf.cpu())\n",
+    "            tmp = re.boxes.xywhn\n",
+    "            boxes.extend(re.boxes.cpu())\n",
+    "            boundingboxes.extend(tmp.cpu())\n",
+    "            cls_conf.extend(re.cls_all.cpu())\n",
+    "            \n",
+    "        #read txt file\n",
+    "        cluster_num = len(np.loadtxt(label_path))\n",
+    "        boundingboxes = np.array(boundingboxes)\n",
+    "        conf = np.array(conf)\n",
+    "        cls_conf = np.array(cls_conf)\n",
+    "        selected_data, labels, variances, weighted_variance_sum = cluster_bounding_boxes(boundingboxes, n_clusters=cluster_num, confs=np.array(conf), threshold=0.5)\n",
+    "        \n",
+    "        objectness_uncertainty = np.var(conf[conf > 0.5])\n",
+    "        \n",
+    "        entropy_cluster = []\n",
+    "        for i in range(cluster_num):\n",
+    "            cluster = cls_conf[conf > 0.5][labels == i]\n",
+    "            entropy = np.apply_along_axis(lambda x: -1 * np.sum(x * np.log2(x)), 1, cluster)\n",
+    "            entropy_cluster.append(np.mean(entropy))\n",
+    "\n",
+    "        weighted_entropy = np.mean(np.array(entropy_cluster) * np.bincount(labels, minlength=cluster_num).reshape(-1, 1) / np.sum(np.bincount(labels)))\n",
+    "        \n",
+    "        print(f'objectness_uncertainty: {objectness_uncertainty}, weighted_variance_sum: {weighted_variance_sum}, weighted_entropy: {weighted_entropy}')\n"
    ]
   },
   {
