--- a/source_code/Mydemo/demo.ipynb
+++ b/source_code/Mydemo/demo.ipynb
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "overexposure plus overdarkness"
+    "overexposure plus underexposure"
    ]
   },
   {
