--- a/source_code/Mydemo/Transform.ipynb
+++ b/source_code/Mydemo/Transform.ipynb
@@ -2,21 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "import albumentations as A\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
-    "from ultralytics.utils.plotting import Annotator, colors\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,11 +74,7 @@
     "    # 保存变换后的标注\n",
     "    with open(output_label_path, 'w') as file:\n",
     "        for bbox in transformed_bboxes:\n",
-    "            x_min, y_min, x_max, y_max, class_id = bbox\n",
-    "            x_center = ((x_min + x_max) / 2) / width\n",
-    "            y_center = ((y_min + y_max) / 2) / height\n",
-    "            bbox_width = (x_max - x_min) / width\n",
-    "            bbox_height = (y_max - y_min) / height\n",
+    "            x_center, y_center, bbox_width, bbox_height, class_id = bbox\n",
     "            file.write(f'{int(class_id)} {x_center} {y_center} {bbox_width} {bbox_height}\\n')\n",
     "\n",
     "import sys\n",
@@ -123,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
