--- a/source_code/Mydemo/create_sharpening.ipynb
+++ b/source_code/Mydemo/create_sharpening.ipynb
@@ -2,6 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "from PIL import Image, ImageEnhance\n",
+    "\n",
+    "import sys\n",
+    "import os\n",
+    "def create_dataset_with_adjust_brightness(brightness=0, base=\"NEU-DET\"):\n",
+    "\n",
+    "    # mkdir\n",
+    "    name = f\"{base}_Sharpen_{brightness}\"\n",
+    "    path = os.path.join('/Data4/student_zhihan_data/data', name)\n",
+    "    if not os.path.exists(path):\n",
+    "        os.mkdir(path)\n",
+    "        # create train, val, test directory\n",
+    "        os.mkdir(os.path.join(path, 'train'))\n",
+    "        os.mkdir(os.path.join(path, 'valid'))\n",
+    "        os.mkdir(os.path.join(path, 'test'))\n",
+    "        # copy images\n",
+    "        os.system(f\"cp -r /Data4/student_zhihan_data/data/{base}/train/* {path}/train\")\n",
+    "        os.system(f\"cp -r /Data4/student_zhihan_data/data/{base}/valid/* {path}/valid\")\n",
+    "        os.system(f\"cp -r /Data4/student_zhihan_data/data/{base}/test/* {path}/test\")\n",
+    "        # copy configure file\n",
+    "        os.system(f\"cp /Data4/student_zhihan_data/data/{base}/data.yaml {path}\")\n",
+    "\n",
+    "    # adjust brightness of images in train, val, test directory\n",
+    "    for dir in ['train', 'valid', 'test']:\n",
+    "        for img in os.listdir(os.path.join(path, dir, \"images\")):\n",
+    "            img_path = os.path.join(path, dir, \"images\", img)\n",
+    "            img = cv2.imread(img_path)\n",
+    "            enhancer = ImageEnhance.Sharpness(Image.fromarray(img))\n",
+    "            img = enhancer.enhance(brightness)\n",
+    "            img = np.array(img)\n",
+    "            cv2.imwrite(img_path, img)\n",
+    "            \n",
+    "for i in range(5, 30, 5):\n",
+    "    create_dataset_with_adjust_brightness(brightness=i, base=\"GC10-DET\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
