--- a/source_code/Mydemo/regression.ipynb
+++ b/source_code/Mydemo/regression.ipynb
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,15 +908,22 @@
     "# features = ['visibility', 'exposure']\n",
     "# features = ['objectness_uncertainty', 'weighted_variance_sum', 'weighted_entropy']\n",
     "X = data[features]\n",
-    "# y = data['mean_f2']\n",
-    "y = data['ap_50_95']\n",
+    "y = data['mean_f2']\n",
+    "# y = data['ap_50_95']\n",
+    "# y = data['ap_50']\n",
+    "\n",
+    "# standard scale X\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "# scaler = StandardScaler()\n",
+    "scaler = MinMaxScaler()\n",
+    "X = scaler.fit_transform(X)\n",
     "\n",
     "# Display the first few rows of features and target to verify"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -942,47 +949,58 @@
        "      <th></th>\n",
        "      <th>MSE</th>\n",
        "      <th>R2</th>\n",
+       "      <th>SRCC</th>\n",
+       "      <th>PLCC</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Linear Regression</th>\n",
-       "      <td>0.065377</td>\n",
-       "      <td>0.131179</td>\n",
+       "      <td>0.193365</td>\n",
+       "      <td>0.095085</td>\n",
+       "      <td>0.307206</td>\n",
+       "      <td>0.309837</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree Regressor</th>\n",
-       "      <td>0.096486</td>\n",
-       "      <td>-0.282236</td>\n",
+       "      <td>0.278456</td>\n",
+       "      <td>-0.303128</td>\n",
+       "      <td>0.342289</td>\n",
+       "      <td>0.344976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MLP Regressor</th>\n",
-       "      <td>0.068393</td>\n",
-       "      <td>0.091110</td>\n",
+       "      <td>0.164386</td>\n",
+       "      <td>0.230698</td>\n",
+       "      <td>0.491347</td>\n",
+       "      <td>0.482120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest Regressor</th>\n",
-       "      <td>0.047503</td>\n",
-       "      <td>0.368724</td>\n",
+       "      <td>0.147170</td>\n",
+       "      <td>0.311267</td>\n",
+       "      <td>0.554401</td>\n",
+       "      <td>0.558895</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              MSE        R2\n",
-       "Linear Regression        0.065377  0.131179\n",
-       "Decision Tree Regressor  0.096486 -0.282236\n",
-       "MLP Regressor            0.068393  0.091110\n",
-       "Random Forest Regressor  0.047503  0.368724"
+       "                              MSE        R2      SRCC      PLCC\n",
+       "Linear Regression        0.193365  0.095085  0.307206  0.309837\n",
+       "Decision Tree Regressor  0.278456 -0.303128  0.342289  0.344976\n",
+       "MLP Regressor            0.164386  0.230698  0.491347  0.482120\n",
+       "Random Forest Regressor  0.147170  0.311267  0.554401  0.558895"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from scipy import stats\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
@@ -1011,7 +1029,10 @@
     "    # Evaluate\n",
     "    mse = mean_squared_error(y_test, y_pred)\n",
     "    r2 = r2_score(y_test, y_pred)\n",
-    "    results[name] = {\"MSE\": mse, \"R2\": r2}\n",
+    "    srcc = stats.spearmanr(y_test, y_pred)[0]\n",
+    "    plcc = stats.pearsonr(y_test, y_pred)[0]\n",
+    "    \n",
+    "    results[name] = {\"MSE\": mse, \"R2\": r2, \"SRCC\": srcc, \"PLCC\": plcc}\n",
     "    \n",
     "    if name == 'Decision Tree Regressor':\n",
     "        # save test resulst to csv\n",
@@ -1020,6 +1041,130 @@
     "\n",
     "results_df = pd.DataFrame(results).T  # Convert results to a DataFrame for better readability\n",
     "results_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<style scoped>\n",
+    "    .dataframe tbody tr th:only-of-type {\n",
+    "        vertical-align: middle;\n",
+    "    }\n",
+    "\n",
+    "    .dataframe tbody tr th {\n",
+    "        vertical-align: top;\n",
+    "    }\n",
+    "\n",
+    "    .dataframe thead th {\n",
+    "        text-align: right;\n",
+    "    }\n",
+    "</style>\n",
+    "<table border=\"1\" class=\"dataframe\">\n",
+    "  <thead>\n",
+    "    <tr style=\"text-align: right;\">\n",
+    "      <th></th>\n",
+    "      <th>MSE</th>\n",
+    "      <th>R2</th>\n",
+    "      <th>SRCC</th>\n",
+    "      <th>PLCC</th>\n",
+    "    </tr>\n",
+    "  </thead>\n",
+    "  <tbody>\n",
+    "    <tr>\n",
+    "      <th>Linear Regression</th>\n",
+    "      <td>0.065377</td>\n",
+    "      <td>0.131179</td>\n",
+    "      <td>0.348499</td>\n",
+    "      <td>0.364317</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>Decision Tree Regressor</th>\n",
+    "      <td>0.096486</td>\n",
+    "      <td>-0.282236</td>\n",
+    "      <td>0.385156</td>\n",
+    "      <td>0.375813</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>MLP Regressor</th>\n",
+    "      <td>0.068393</td>\n",
+    "      <td>0.091110</td>\n",
+    "      <td>0.340770</td>\n",
+    "      <td>0.308201</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>Random Forest Regressor</th>\n",
+    "      <td>0.047503</td>\n",
+    "      <td>0.368724</td>\n",
+    "      <td>0.598867</td>\n",
+    "      <td>0.609294</td>\n",
+    "    </tr>\n",
+    "  </tbody>\n",
+    "</table>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<style scoped>\n",
+    "    .dataframe tbody tr th:only-of-type {\n",
+    "        vertical-align: middle;\n",
+    "    }\n",
+    "\n",
+    "    .dataframe tbody tr th {\n",
+    "        vertical-align: top;\n",
+    "    }\n",
+    "\n",
+    "    .dataframe thead th {\n",
+    "        text-align: right;\n",
+    "    }\n",
+    "</style>\n",
+    "<table border=\"1\" class=\"dataframe\">\n",
+    "  <thead>\n",
+    "    <tr style=\"text-align: right;\">\n",
+    "      <th></th>\n",
+    "      <th>MSE</th>\n",
+    "      <th>R2</th>\n",
+    "      <th>SRCC</th>\n",
+    "      <th>PLCC</th>\n",
+    "    </tr>\n",
+    "  </thead>\n",
+    "  <tbody>\n",
+    "    <tr>\n",
+    "      <th>Linear Regression</th>\n",
+    "      <td>0.193365</td>\n",
+    "      <td>0.095085</td>\n",
+    "      <td>0.307206</td>\n",
+    "      <td>0.309837</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>Decision Tree Regressor</th>\n",
+    "      <td>0.272660</td>\n",
+    "      <td>-0.276006</td>\n",
+    "      <td>0.349884</td>\n",
+    "      <td>0.361031</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>MLP Regressor</th>\n",
+    "      <td>0.190556</td>\n",
+    "      <td>0.108228</td>\n",
+    "      <td>0.324465</td>\n",
+    "      <td>0.333133</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <th>Random Forest Regressor</th>\n",
+    "      <td>0.147864</td>\n",
+    "      <td>0.308021</td>\n",
+    "      <td>0.550822</td>\n",
+    "      <td>0.556283</td>\n",
+    "    </tr>\n",
+    "  </tbody>\n",
+    "</table>\n",
+    "</div>"
    ]
   },
   {
@@ -1494,24 +1639,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "count    1413.000000\n",
-       "mean        0.236373\n",
-       "std         0.274412\n",
+       "mean        0.471483\n",
+       "std         0.462422\n",
        "min         0.000000\n",
        "25%         0.000000\n",
-       "50%         0.099500\n",
-       "75%         0.447750\n",
-       "max         0.995000\n",
-       "Name: ap_50_95, dtype: float64"
+       "50%         0.500000\n",
+       "75%         1.000000\n",
+       "max         1.000000\n",
+       "Name: mean_f2, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
